# dota2_data_engg_proj

./: Dockerfile  Pipfile  README.md  pyproject.toml  test.py
data/: match_ids.pk1
src/: config.py  database.py  datagatherer.py  dota2api.py  redisclient.py
src/db/: db_setup.sql
