[tool.poetry]
name = "dota2-data-engg"
version = "0.1.0"
description = "Python project exmample"
authors = ["Jude <darryl@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "data"}]
keywords = ["data"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "*"
polars = "^0.16.11"
requests = "^2.28.2"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "*"
pre-commit = "*"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"